# MinestratorTerminal

./: .gitattributes  .gitignore  ARCHITECTURE-V1.md  ARCHITECTURE.md  COPILOT.md  Cargo.toml  DESIGN.md  MCP.md  MCP_MINESTRATOR.txt  README.md  ROADMAP.md  package-lock.json  package.json
.github/workflows/: release.yml
crates/minestrator-core/: Cargo.toml
crates/minestrator-core/src/: api.rs  archive.rs  cache.rs  cli.rs  cli_agent.rs  cli_session.rs  config.rs  console.rs  copilot.rs  doctor.rs  error.rs  events.rs  factorio.rs  ficsit.rs  games.rs  lib.rs  llm.rs  mca.rs  mcp.rs  models.rs  mods.rs  nbt.rs  official_mcp.rs  paste.rs  perf.rs  persist.rs  redact.rs  secrets.rs  sftp.rs  store.rs  supervisor.rs  thunderstore.rs  umod.rs  util.rs  world.rs
crates/minestrator-core/src/secrets/: file_store.rs
crates/minestrator-daemon/: Cargo.toml  README.md
crates/minestrator-daemon/src/: config.rs  fcm.rs  main.rs  tokens.rs
crates/minestrator-mcp/: Cargo.toml
crates/minestrator-mcp/src/: main.rs
desktop/: package-lock.json  package.json
desktop/src/: app.css
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/icons/: icon.icns
desktop/src/lib/: close.svelte.ts  debug.svelte.ts  events.ts  ipc.ts  markdown.ts  redact.ts  status.ts  theme.ts  types.ts  windows.ts
desktop/src/lib/components/: CloseDialog.svelte  CopilotCenter.svelte  Gauge.svelte  HomePanel.svelte  Icon.svelte  ModInstallCenter.svelte  PowerControl.svelte  ServerCard.svelte  StatusDot.svelte  TabBar.svelte  UpdateBanner.svelte
desktop/src/lib/components/views/: BackupsView.svelte  FileEditor.svelte  MarketplaceView.svelte  PlayersView.svelte
desktop/src/lib/copilot/: diagnoses.svelte.ts  menu.svelte.ts
desktop/src/lib/games/: capabilities.svelte.ts
desktop/src/lib/i18n/: en.ts  fr.ts
desktop/src/lib/servers/: colors.svelte.ts  runtime.svelte.ts
desktop/src/lib/sftp/: columns.svelte.ts
desktop/src/lib/tabs/: tabs.svelte.ts
desktop/src/lib/transfers/: transfers.svelte.ts
desktop/src/lib/util/: id.ts
desktop/src/routes/: +layout.svelte
docs/: AUTO-UPDATE.md  PUSH.md
docs/history/: ARCHITECTURE-V1.md
docs/screenshots/: README.md
mobile/: README.md  package-lock.json  package.json  svelte.config.js  vite.config.js
mobile/src/: app.css  app.html
mobile/src-tauri/: Cargo.toml  tauri.conf.json
mobile/src-tauri/capabilities/: default.json
mobile/src-tauri/src/: apk_installer.rs  background.rs  commands.rs  lib.rs  main.rs  update.rs
mobile/src/lib/: codemirror-langs.ts  events.ts  i18n.ts  icons.ts  ipc.ts  mcCommands.ts  portal.ts  types.ts
mobile/src/lib/components/: BottomNav.svelte  CodeEditor.svelte  GameIcon.svelte  Icon.svelte  Onboarding.svelte  ServerView.svelte  ServersList.svelte  SettingsView.svelte  UpdateBanner.svelte
mobile/src/lib/components/views/: BackupsView.svelte  ConsoleView.svelte  OverviewView.svelte  PlayersView.svelte  SftpView.svelte
mobile/src/lib/stores/: auth.svelte.ts  settings.svelte.ts
mobile/src/routes/: +layout.ts  +page.svelte
src/: app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs  main.rs
src/lib/: events.ts  ipc.ts  paste.ts  types.ts  updater.ts
src/lib/alerts/: alerts.svelte.ts
src/lib/components/: ActionList.svelte  AlertCenter.svelte  CopilotContextMenu.svelte  HomePanel.svelte  Icon.svelte  MetricsChart.svelte  NbtTree.svelte  PlayerActionsMenu.svelte  ServerCard.svelte  ServerPanel.svelte  TabBar.svelte  UpdateBanner.svelte  UserMenu.svelte  Workspace.svelte
src/lib/components/views/: AssistantView.svelte  ComingSoon.svelte  ConsoleView.svelte  CopilotView.svelte  FileEditor.svelte  ModMarketplaceView.svelte  SatisfactoryModsView.svelte  ServerOverview.svelte  SettingsView.svelte  SftpView.svelte
src/lib/copilot/: format.ts
src/lib/i18n/: en.ts  fr.ts  index.svelte.ts  index.ts
src/lib/mods/: installs.svelte.ts
src/lib/stores/: auth.svelte.ts
src/lib/tabs/: mode.svelte.ts
src/routes/: +layout.svelte  +layout.ts  +page.svelte
src/routes/onboarding/: +page.svelte
