# Workspace racine : sépare la logique métier (minestrator-core) de ses frontends.
# Frontends actuels : src-tauri (desktop). À venir : daemon Linux, CLI/TUI — ils
# dépendront tous du même `minestrator-core`.
[workspace]
resolver = "2"
members = ["src-tauri", "crates/minestrator-core", "crates/minestrator-mcp"]

[workspace.package]
version = "0.3.0"
edition = "2021"
authors = ["Geoffrey Lecoq"]
license = "GPL-3.0-or-later"
