# Workspace racine : sépare la logique métier (minestrator-core) de ses frontends.
# Frontends : desktop/src-tauri (app desktop) et mobile/src-tauri (app Android/iOS, à venir).
# À venir aussi : daemon Linux, CLI/TUI — tous dépendront du même `minestrator-core`.
[workspace]
resolver = "2"
members = ["desktop/src-tauri", "crates/minestrator-core", "crates/minestrator-mcp"]

[workspace.package]
version = "0.3.2"
edition = "2021"
authors = ["Geoffrey Lecoq"]
license = "GPL-3.0-or-later"
