# Workspace racine : sépare la logique métier (minestrator-core) de ses frontends.
# Frontends : desktop/src-tauri (app desktop) et mobile/src-tauri (app Android/iOS, à venir).
# À venir aussi : daemon Linux, CLI/TUI — tous dépendront du même `minestrator-core`.
[workspace]
resolver = "2"
members = [
    "desktop/src-tauri",
    "mobile/src-tauri",
    "crates/minestrator-core",
    "crates/minestrator-mcp",
    "crates/minestrator-daemon",
]

[workspace.package]
version = "0.4.1"
edition = "2021"
authors = ["Geoffrey Lecoq"]
license = "GPL-3.0-or-later"
