[package]
name = "minestrator-daemon"
description = "Daemon Linux : surveille les serveurs via minestrator-core et pousse des notifications FCM (alertes app fermée sur mobile)"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "minestrator-daemon"
path = "src/main.rs"

[dependencies]
# Réutilise TOUTE la logique métier (superviseur, alertes, API) — comme le desktop.
minestrator-core = { path = "../minestrator-core" }

tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "signal", "sync"] }
# Envoi HTTP FCM v1 (rustls, pas d'OpenSSL — cohérent avec le core).
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
