[package]
name = "minestrator-terminal-mobile"
description = "App mobile (Android/iOS) pour piloter ses serveurs Minecraft via l'API MineStrator"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
# `_lib` évite un conflit de nom lib/bin ; `cdylib` est requis pour Android/iOS
# (la lib native chargée par l'activité Android / l'app iOS).
name = "minestrator_terminal_mobile_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Pas de feature `tray-icon` (desktop-only) ici.
tauri = { version = "2", features = [] }
tauri-plugin-notification = "2"
# Ouverture d'URL externe (lien vers le site MineStrator).
tauri-plugin-opener = "2"

# Toute la logique métier vit dans le core, partagé avec le desktop et le futur daemon.
minestrator-core = { path = "../../crates/minestrator-core" }

# Relais des CoreEvent (broadcast) vers le webview.
tokio = { version = "1", features = ["sync", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Auto-update mobile : check via l'API GitHub Releases + téléchargement de l'APK (rustls).
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
